--- a/index.html
+++ b/index.html
@@ -2449,6 +2449,284 @@
                 ],
                 badge: "Quick Meal"
             },
+             {
+                id: 2,
+                title: "Vegetable Pasta",
+                category: ["vegetarian", "quick"],
+                time: "20 mins",
+                type: "Main Course",
+                image: "https://images.unsplash.com/photo-1499636136210-6f4ee915583e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1528&q=80",
+                description: "Simple pasta with fresh vegetables in a light sauce.",
+                ingredients: ["pasta", "tomatoes", "spinach", "onions", "garlic", "olive oil", "cheese"],
+                instructions: [
+                    "Cook pasta according to package directions",
+                    "Sauté onions and garlic in olive oil",
+                    "Add tomatoes and cook until softened",
+                    "Stir in spinach until wilted",
+                    "Toss with cooked pasta",
+                    "Top with grated cheese"
+                ],
+                badge: "Vegetarian"
+            },
+            {
+                id: 3,
+                title: "Beef Tacos",
+                category: ["comfort"],
+                time: "30 mins",
+                type: "Main Course",
+                image: "https://images.unsplash.com/photo-1499636136210-6f4ee915583e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1528&q=80",
+                description: "Classic beef tacos with all the fixings for a family favorite meal.",
+                ingredients: ["beef", "taco shells", "cheese", "lettuce", "tomatoes", "onions", "sour cream"],
+                instructions: [
+                    "Brown ground beef in a skillet",
+                    "Add taco seasoning and water, simmer",
+                    "Chop vegetables for toppings",
+                    "Warm taco shells according to package",
+                    "Assemble tacos with beef and toppings"
+                ],
+                badge: "Family Favorite"
+            },
+            {
+                id: 4,
+                title: "Chocolate Chip Cookies",
+                category: ["dessert"],
+                time: "45 mins",
+                type: "Dessert",
+                image: "https://images.unsplash.com/photo-1499636136210-6f4ee915583e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1528&q=80",
+                description: "Classic homemade chocolate chip cookies that are soft and chewy.",
+                ingredients: ["flour", "sugar", "butter", "eggs", "chocolate chips", "vanilla extract"],
+                instructions: [
+                    "Preheat oven to 375°F (190°C)",
+                    "Cream butter and sugars together",
+                    "Beat in eggs and vanilla",
+                    "Mix in flour and chocolate chips",
+                    "Drop by spoonfuls onto baking sheet",
+                    "Bake for 9-11 minutes until golden"
+                ],
+                badge: "Classic"
+            },
+            {
+                id: 5,
+                title: "Vegetable Fried Rice",
+                category: ["vegetarian", "quick"],
+                time: "20 mins",
+                type: "Main Course",
+                image: "https://images.unsplash.com/photo-1603133872878-684f208fb84b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80",
+                description: "Quick and easy fried rice packed with vegetables.",
+                ingredients: ["rice", "eggs", "carrots", "peas", "onions", "soy sauce", "oil"],
+                instructions: [
+                    "Heat oil in a large pan or wok",
+                    "Scramble eggs and set aside",
+                    "Sauté onions and carrots",
+                    "Add cooked rice and peas",
+                    "Stir in soy sauce and cooked eggs",
+                    "Cook until heated through"
+                ],
+                badge: "Quick Meal"
+            },
+            {
+                id: 6,
+                title: "Pancakes",
+                category: ["quick"],
+                time: "20 mins",
+                type: "Breakfast",
+                image: "https://images.unsplash.com/photo-1567620905732-2d1ec7ab7445?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1480&q=80",
+                description: "Fluffy homemade pancakes perfect for weekend breakfasts.",
+                ingredients: ["flour", "sugar", "eggs", "milk", "butter", "baking powder"],
+                instructions: [
+                    "Mix dry ingredients in a bowl",
+                    "Whisk together wet ingredients",
+                    "Combine wet and dry ingredients",
+                    "Heat butter in a pan",
+                    "Pour batter and cook until bubbles form",
+                    "Flip and cook other side"
+                ],
+                badge: "Breakfast"
+            },
+            {
+                id: 7,
+                title: "Spaghetti Carbonara",
+                category: ["comfort"],
+                time: "30 mins",
+                type: "Main Course",
+                image: "https://images.unsplash.com/photo-1588013273468-315fd88ea34c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1469&q=80",
+                description: "Creamy Italian pasta dish with eggs, cheese, and pancetta.",
+                ingredients: ["pasta", "eggs", "cheese", "bacon", "garlic", "black pepper"],
+                instructions: [
+                    "Cook pasta according to package",
+                    "Fry bacon until crispy",
+                    "Whisk eggs and grated cheese",
+                    "Drain pasta, reserve some water",
+                    "Combine hot pasta with egg mixture",
+                    "Add bacon and pasta water as needed"
+                ],
+                badge: "Comfort Food"
+            },
+
+            {
+                id: 8,
+                title: "Greek Salad",
+                category: ["vegetarian", "healthy"],
+                time: "15 mins",
+                type: "Salad",
+                image: "https://images.unsplash.com/photo-1546793665-c74683f339c1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80",
+                description: "Fresh and healthy Mediterranean salad with feta and olives.",
+                ingredients: ["tomatoes", "cucumber", "onions", "olives", "feta cheese", "olive oil"],
+                instructions: [
+                    "Chop tomatoes, cucumber, and onions",
+                    "Combine with olives in a bowl",
+                    "Crumble feta cheese on top",
+                    "Drizzle with olive oil",
+                    "Toss gently before serving"
+                ],
+                badge: "Healthy"
+            },
+            {
+                id: 9,
+                title: "Beef Stew",
+                category: ["comfort"],
+                time: "2 hours",
+                type: "Main Course",
+                image: "https://images.unsplash.com/photo-1603105037880-880cd4edfb0d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80",
+                description: "Hearty beef stew with vegetables, perfect for cold days.",
+                ingredients: ["beef", "potatoes", "carrots", "onions", "beef broth", "flour", "oil"],
+                instructions: [
+                    "Coat beef cubes in flour",
+                    "Brown beef in oil",
+                    "Add chopped vegetables",
+                    "Pour in beef broth",
+                    "Simmer for 1.5-2 hours",
+                    "Season to taste"
+                ],
+                badge: "Comfort Food"
+            },
+            {
+                id: 10,
+                title: "Vegetable Omelette",
+                category: ["vegetarian", "quick", "healthy"],
+                time: "15 mins",
+                type: "Breakfast",
+                image: "https://images.unsplash.com/photo-1551183053-bf91a1d81141?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80",
+                description: "Fluffy omelette filled with your favorite vegetables.",
+                ingredients: ["eggs", "bell peppers", "onions", "cheese", "oil", "salt", "pepper"],
+                instructions: [
+                    "Whisk eggs with salt and pepper",
+                    "Sauté vegetables in oil",
+                    "Pour eggs over vegetables",
+                    "Cook until set, add cheese",
+                    "Fold omelette in half"
+                ],
+                badge: "Quick Meal"
+           },
+           {
+        id: 11,
+        title: "Classic Beef Burger",
+        category: ["comfort"],
+        time: "30 mins",
+        type: "Main Course",
+        image: "https://images.unsplash.com/photo-1568901346375-23c9450c58cd",
+        description: "Juicy beef patties with cheese, served in toasted buns with fresh toppings.",
+        ingredients: ["beef", "burger buns", "cheese", "lettuce", "tomatoes", "onions", "ketchup"],
+        instructions: [
+            "Shape beef into patties and season",
+            "Grill patties for 4-5 minutes per side",
+            "Add cheese during last minute of cooking",
+            "Toast buns lightly",
+            "Assemble with lettuce, tomato, and onion",
+            "Serve with ketchup"
+        ],
+        badge: "Family Favorite"
+    },
+{
+        id: 12,
+        title: "Vegetable Lasagna",
+        category: ["vegetarian"],
+        time: "1 hour",
+        type: "Main Course",
+        image: "https://images.unsplash.com/photo-1629115916087-7e8c114a24ed",
+        description: "Layers of pasta, ricotta, and seasonal vegetables baked to perfection.",
+        ingredients: ["lasagna noodles", "ricotta cheese", "spinach", "zucchini", "tomatoes", "mozzarella"],
+        instructions: [
+            "Boil lasagna noodles until al dente",
+            "Sauté vegetables until tender",
+            "Layer noodles, ricotta, vegetables in baking dish",
+            "Top with mozzarella",
+            "Bake at 375°F for 30 minutes"
+        ],
+        badge: "Vegetarian"
+    },
+    {
+        id: 13,
+        title: "Lemon Garlic Salmon",
+        category: ["healthy"],
+        time: "25 mins",
+        type: "Main Course",
+        image: "https://images.unsplash.com/photo-1519708227418-c8fd9a32b7a2",
+        description: "Pan-seared salmon with bright lemon and aromatic garlic flavors.",
+        ingredients: ["salmon fillets", "lemon", "garlic", "olive oil", "butter", "parsley"],
+        instructions: [
+            "Season salmon with salt and pepper",
+            "Sear in hot pan with olive oil",
+            "Add minced garlic and butter",
+            "Squeeze lemon juice over top",
+            "Garnish with fresh parsley"
+        ],
+        badge: "Healthy"
+    },
+    {
+        id: 14,
+        title: "Chocolate Mousse",
+        category: ["dessert"],
+        time: "4 hours",
+        type: "Dessert",
+        image: "https://images.unsplash.com/photo-1563805042-7684c019e1cb",
+        description: "Light and airy chocolate dessert that melts in your mouth.",
+        ingredients: ["dark chocolate", "heavy cream", "eggs", "sugar", "vanilla extract"],
+        instructions: [
+            "Melt chocolate and let cool slightly",
+            "Whip cream to soft peaks",
+            "Beat egg yolks with sugar",
+            "Fold all ingredients together",
+            "Chill for at least 4 hours"
+        ],
+        badge: "Decadent"
+    },
+    {
+        id: 15,
+        title: "Chicken Caesar Salad",
+        category: ["healthy", "quick"],
+        time: "20 mins",
+        type: "Salad",
+        image: "https://images.unsplash.com/photo-1546793665-c74683f339c1",
+        description: "Classic salad with grilled chicken, crisp romaine, and creamy dressing.",
+        ingredients: ["chicken breast", "romaine lettuce", "parmesan", "croutons", "caesar dressing"],
+        instructions: [
+            "Grill chicken and slice",
+            "Chop and wash lettuce",
+            "Toss with dressing",
+            "Top with chicken, croutons, and parmesan"
+        ],
+        badge: "Quick Meal"
+    },
+    {
+        id: 16,
+        title: "Beef and Broccoli Stir Fry",
+        category: ["quick"],
+        time: "25 mins",
+        type: "Main Course",
+        image: "https://images.unsplash.com/photo-1604917018610-3849a54b4e5e",
+        description: "Tender beef and crisp broccoli in a savory sauce over rice.",
+        ingredients: ["beef sirloin", "broccoli", "soy sauce", "garlic", "ginger", "rice"],
+        instructions: [
+            "Slice beef thinly against the grain",
+            "Stir-fry beef until browned",
+            "Add broccoli and sauce ingredients",
+            "Cook until broccoli is tender-crisp",
+            "Serve over rice"
+        ],
+        badge: "Asian Inspired"
+    },
+            
             // ... (include all your recipe objects here)
             // I've shortened this for brevity - include all 20 recipes from your original code
         ];
